[gd_scene load_steps=5 format=3 uid="uid://crjrcdl5felte"]

[ext_resource type="Texture2D" uid="uid://dwbm5xf0misif" path="res://images/characters/Paarthurax/kirby sad.png" id="1_2w2sb"]
[ext_resource type="Script" path="res://scripts/sorry.gd" id="1_hi3ph"]
[ext_resource type="Texture2D" uid="uid://c55bplvds7ki8" path="res://images/direction/orange-right-arrow.png" id="3_7tr5u"]
[ext_resource type="AudioStream" uid="uid://cyrs64l1liqn" path="res://sounds/Mandela Catalogue_ Amazing Grace.mp3" id="3_knri1"]

[node name="Sorry" type="Node2D"]
script = ExtResource("1_hi3ph")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 647.0

[node name="PaarthText" type="Label" parent="."]
offset_right = 1154.0
offset_bottom = 151.0
theme_override_colors/font_color = Color(0.957844, 0.664739, 0.0195007, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 54
text = "Sorry guys, I ran out of time for this one. 
Koopa and Mostdeaf will join you once you 
enter the McDonald's, free of charge."
horizontal_alignment = 1

[node name="Leave" type="Button" parent="."]
offset_left = 16.0
offset_top = 488.0
offset_right = 316.0
offset_bottom = 638.0
theme_override_colors/font_color = Color(0.956863, 0.666667, 0.0196078, 1)
theme_override_font_sizes/font_size = 31
text = "It's okay,
buddy"

[node name="Mistake" type="Button" parent="."]
visible = false
offset_left = 431.0
offset_top = 488.0
offset_right = 731.0
offset_bottom = 638.0
theme_override_colors/font_color = Color(0.956863, 0.666667, 0.0196078, 1)
theme_override_font_sizes/font_size = 31
text = "Gun"

[node name="Leave2" type="Button" parent="."]
offset_left = 841.0
offset_top = 488.0
offset_right = 1141.0
offset_bottom = 638.0
theme_override_colors/font_color = Color(0.956863, 0.666667, 0.0196078, 1)
theme_override_font_sizes/font_size = 31
text = "It was not lore 
accurate anyway"

[node name="Sweet Grace" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_knri1")
volume_db = -23.098

[node name="Arrow1" type="Sprite2D" parent="."]
visible = false
position = Vector2(1020, 500)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_7tr5u")

[node name="Right" type="Button" parent="."]
visible = false
offset_left = 968.0
offset_top = 451.0
offset_right = 1068.0
offset_bottom = 551.0
focus_mode = 0
flat = true

[node name="Timer" type="Timer" parent="."]
wait_time = 44.0
one_shot = true

[node name="Paarthurax" type="Sprite2D" parent="."]
position = Vector2(567, 341)
rotation = 3.14159
scale = Vector2(0.415557, -0.391736)
texture = ExtResource("1_2w2sb")

[connection signal="pressed" from="Leave" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="Mistake" to="." method="_on_mistake_pressed"]
[connection signal="pressed" from="Leave2" to="." method="_on_leave_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_right_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
